# ResumeFastAPI

./: README.md  manager.py  pyproject.toml
src/api/v1/: __init__.py
tests/: test_manager.py
