[tool.poetry]
name = "resumefastapi"
version = "0.1.0"
description = "FastAPI backend for my resume web-site"
authors = ["Eugene <e.krotov03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.110.1"}
typer = "^0.12.1"
uvicorn = {extras = ["all"], version = "^0.29.0"}


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88